Changed the Work section

--- a/about.html
+++ b/about.html
@@ -36,18 +36,6 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
-          <img
-            src="src/logo.png"
-            class="logo d-none d-md-block"
-            alt="logo of SheCodes"
-          />
-          <img
-            src="src/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="small version of the SheCodes logo"
-          />
-        </a>
         <ul>
           <li>
             <a href="index.html" title="Homepage">Home</a>
@@ -71,10 +59,12 @@
             <h1 class="mb-4">Hi! 👋 I am <br />Kat Górzyńska</h1>
             <h2 class="mb-5">Front-end developer from The Hague</h2>
             <p class="mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
+              I am a very organized person with great time management skills.<br />
+              I am a quick and patient learner, not afraid of new challenges.<br />I
+              studied Speech Therapy, but my interests have always revolved
+              around technology. I worked as a game tester and have now finished
+              a programming course. I am looking forward to continuing my career
+              in IT.
             </p>
             <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
@@ -104,17 +94,15 @@
             >
           </div>
         </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            href="mailto:gorzynska.kat@gmail.com"
-            class="email-link"
-            title="Email Kat Górzyńska"
-            >gorzynska.kat@gmail.com</a
-          >
-        </div>
         <div class="social d-flex justify-content-center">
           <a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            href="mailto:gorzynska.kat@gmail.com"
+            target="_blank"
+            title="Email Kat Górzyńska"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/katgorzynska/"
             target="_blank"
             title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
@@ -124,12 +112,6 @@
             target="_blank"
             title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/kittyjagger/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
         <p class="text-center mt-5">
