--- a/contact.html
+++ b/contact.html
@@ -36,18 +36,6 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
-          <img
-            src="src/logo.png"
-            class="logo d-none d-md-block"
-            alt="logo of SheCodes"
-          />
-          <img
-            src="src/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="small version of the SheCodes logo"
-          />
-        </a>
         <ul>
           <li>
             <a href="index.html" title="Homepage">Home</a>
@@ -69,7 +57,7 @@
         <h1 class="mb-5">Let's get in touch!</h1>
       </div>
     </div>
-    <div class="container">
+    <div class="container text-center">
       <div class="justify-content-md-center">
         <ul>
           <li>
@@ -81,7 +69,7 @@
         <li>
           <i class="fa-brands fa-linkedin"></i
           ><a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            href="https://www.linkedin.com/in/katgorzynska/"
             target="”_blank”"
             class="social"
           >
@@ -97,15 +85,6 @@
             >GitHub</a
           >
                     </li>
-        <li>
-          <i class="fa-brands fa-instagram"></i>
-          <a
-            href="https://www.instagram.com/kittyjagger/"
-            target="”_blank”"
-            class="social"
-            >Instagram</a
-          >
-        </li>
         </div>
       </div>
     </ul>
@@ -126,17 +105,15 @@
             >
           </div>
         </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            href="mailto:gorzynska.kat@gmail.com"
-            class="email-link"
-            title="Email Kat Górzyńska"
-            >gorzynska.kat@gmail.com</a
-          >
-        </div>
         <div class="social d-flex justify-content-center">
           <a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            href="mailto:gorzynska.kat@gmail.com"
+            target="_blank"
+            title="Email Kat Górzyńska"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/katgorzynska/"
             target="_blank"
             title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
@@ -146,12 +123,6 @@
             target="_blank"
             title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/kittyjagger/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
         <p class="text-center mt-5">
