--- a/index.html
+++ b/index.html
@@ -36,18 +36,6 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
-          <img
-            src="src/logo.png"
-            class="logo d-none d-md-block"
-            alt="logo of SheCodes"
-          />
-          <img
-            src="src/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="small version of the SheCodes logo"
-          />
-        </a>
         <ul>
           <li class="active">
             <a href="index.html" title="Homepage">Home</a>
@@ -77,26 +65,29 @@
         >
       </div>
     </div>
-    <p class="text-center m-5">Featured projects - my best projects to show</p>
+    <p class="text-center m-5">Featured projects</p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="src/yogurt.png" class="img-fluid" alt="Yogurt project" />
+          <img
+            src="src/transparent-weather-app-html.png"
+            class="img-fluid"
+            alt="Weather project HTML"
+          />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt app</h2>
+            <h2 class="mb-5">Weather App HTML</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              A weather app with a forecast, search engine, weather icons and
+              geolocation built with HTML, CSS and JavaScript.
             </p>
             <div class="mt-5">
               <a
-                href="work.html"
+                href="https://delightful-starburst-a22e25.netlify.app/"
+                target="_blank"
                 class="btn btn-branding-outline"
-                title="Yogurt project"
+                title="Weather App HTML"
                 >Learn more</a
               >
             </div>
@@ -106,16 +97,15 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Weather app</h2>
+            <h2 class="mb-5">Weather App React</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              A weather app with search engine, weather icons and a forecast
+              built with React.
             </p>
 
             <a
-              href="work.html"
+              href="https://bejewelled-basbousa-cb89fd.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
               title="Weather project"
               >Learn more</a
@@ -123,30 +113,33 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="src/weather.png" class="img-fluid" alt="Weather project" />
+          <img
+            src="src/transparent-weather-app-react.png"
+            class="img-fluid"
+            alt="Weather project React"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="src/dictionary.png"
+            src="src/transparent-world-clock.png"
             alt="Dictionary project"
             class="img-fluid"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary app</h2>
+            <h2 class="mb-5">World Clock</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              A simple world clock app with a search engine built with HTML, CSS
+              and JavaScript.
             </p>
             <a
-              href="work.html"
+              href="https://harmonious-rolypoly-920b1e.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
-              title="Dictionary project"
+              title="World Clock"
               >Learn more</a
             >
           </div>
@@ -167,17 +160,15 @@
             >
           </div>
         </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            href="mailto:gorzynska.kat@gmail.com"
-            class="email-link"
-            title="Email Kat Górzyńska"
-            >gorzynska.kat@gmail.com</a
-          >
-        </div>
         <div class="social d-flex justify-content-center">
           <a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            href="mailto:gorzynska.kat@gmail.com"
+            target="_blank"
+            title="Email Kat Górzyńska"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/katgorzynska/"
             target="_blank"
             title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
@@ -187,12 +178,6 @@
             target="_blank"
             title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/kittyjagger/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
         <p class="text-center mt-5">
