--- a/work.html
+++ b/work.html
@@ -38,18 +38,6 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
-          <img
-            src="src/logo.png"
-            class="logo d-none d-md-block"
-            alt="logo of SheCodes"
-          />
-          <img
-            src="src/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="small version of the SheCodes logo"
-          />
-        </a>
         <ul>
           <li>
             <a href="index.html" title="Homepage">Home</a>
@@ -71,42 +59,51 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6">
-            <img
-              src="src/yogurt.png"
-              class="img-fluid mb-3"
-              alt="Yogurt project"
-            />
-            <h3 class="text-center m-0">Yogurt project</h3>
-            <p class="text-center">Built with HTML and CSS</p>
-          </div>
-          <div class="col-md-6">
-            <img
-              src="src/weather.png"
-              class="img-fluid mb-3"
-              alt="Weather App"
-            />
+            <a
+              href="https://delightful-starburst-a22e25.netlify.app/"
+              target="_blank"
+              ><img
+                src="src/transparent-weather-app-html.png"
+                class="img-fluid mb-3"
+                alt="Weather App HTML"
+            /></a>
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center">Built with HTML, CSS and JavaScript</p>
+          </div>
+          <div class="col-md-6">
+            <a
+              href="https://bejewelled-basbousa-cb89fd.netlify.app/"
+              target="_blank"
+              ><img
+                src="src/transparent-weather-app-react.png"
+                class="img-fluid mb-3"
+                alt="Weather App React"
+            /></a>
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center">Built with React</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <img
-              src="src/dictionary.png"
-              class="img-fluid mb-3"
-              alt="Dictionary project"
-            />
-            <h3 class="text-center m-0">Dictionary</h3>
-            <p class="text-center">Built with HTML, CSS and React</p>
+            <a
+              href="https://harmonious-rolypoly-920b1e.netlify.app/"
+              target="_blank"
+              ><img
+                src="src/transparent-world-clock.png"
+                class="img-fluid mb-3"
+                alt="World clock"
+            /></a>
+            <h3 class="text-center m-0">World Clock</h3>
+            <p class="text-center">Built with HTML, CSS and JavaScript</p>
           </div>
           <div class="col-md-6">
             <img
               src="src/translation.png"
-              class="img-fluid mb-3"
+              class="img-fluid mb-3 hidden"
               alt="Translation project"
             />
-            <h3 class="text-center m-0">Translation App</h3>
-            <p class="text-center">Built with HTML, CSS and React</p>
+            <h3 class="text-center m-0 hidden">Translation App</h3>
+            <p class="text-center hidden">Built with HTML, CSS and React</p>
           </div>
         </div>
       </div>
@@ -127,17 +124,15 @@
             >
           </div>
         </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            href="mailto:gorzynska.kat@gmail.com"
-            class="email-link"
-            title="Email Kat Górzyńska"
-            >gorzynska.kat@gmail.com</a
-          >
-        </div>
         <div class="social d-flex justify-content-center">
           <a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            href="mailto:gorzynska.kat@gmail.com"
+            target="_blank"
+            title="Email Kat Górzyńska"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/katgorzynska/"
             target="_blank"
             title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
@@ -147,12 +142,6 @@
             target="_blank"
             title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/kittyjagger/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
         <p class="text-center mt-5">
