Added a dictionary project

--- a/index.html
+++ b/index.html
@@ -145,6 +145,31 @@
           </div>
         </div>
       </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">
+              A simple Dictionary app with search engine and images built with React.
+            </p>
+
+            <a
+              href="https://cute-salamander-524e75.netlify.app/"
+              target="_blank"
+              class="btn btn-branding-outline"
+              title="Dictionary project"
+              >Learn more</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="src/transparent-dictionary.png"
+            class="img-fluid"
+            alt="Dictionary project"
+          />
+        </div>
+      </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
