--- a/work.html
+++ b/work.html
@@ -97,13 +97,15 @@
             <p class="text-center">Built with HTML, CSS and JavaScript</p>
           </div>
           <div class="col-md-6">
-            <img
-              src="src/translation.png"
-              class="img-fluid mb-3 hidden"
-              alt="Translation project"
-            />
-            <h3 class="text-center m-0 hidden">Translation App</h3>
-            <p class="text-center hidden">Built with HTML, CSS and React</p>
+            <a href="https://cute-salamander-524e75.netlify.app/
+            target="_blank"
+            >            <img
+              src="src/transparent-dictionary.png"
+              class="img-fluid mb-3"
+              alt="Dictionary project"
+            /></a>
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center">Built with HTML, CSS and React</p>
           </div>
         </div>
       </div>
