--- a/about.html
+++ b/about.html
@@ -59,12 +59,11 @@
             <h1 class="mb-4">Hi! 👋 I am <br />Kat Górzyńska</h1>
             <h2 class="mb-5">Front-end developer from The Hague</h2>
             <p class="mb-5">
-              I am a very organized person with great time management skills.<br />
-              I am a quick and patient learner, not afraid of new challenges.<br />I
-              studied Speech Therapy, but my interests have always revolved
-              around technology. I worked as a game tester and have now finished
-              a programming course. I am looking forward to continuing my career
-              in IT.
+              I am Kat, with a background in speech therapy, but I've always been interested in IT as well. I tried to combine these two subjects by writing my master's thesis on esports commentators. After moving to the Netherlands three years ago, where I didn't speak the language, I worked hard to learn Dutch. I successfully completed a course and have now reached level B2.
+
+After completing a programming course, I am proficient in HTML, CSS, JavaScript, and React, and I have developed several websites.
+
+As a person, I am responsible and strive for good relationships and communication with others. I am curious and motivated to continually develop myself, both personally and professionally.
             </p>
             <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
