Added new projects

--- a/work.html
+++ b/work.html
@@ -108,6 +108,31 @@
             <p class="text-center">Built with HTML, CSS and React</p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+            <a
+              href="https://warsaw-travel.netlify.app/"
+              target="_blank"
+              ><img
+                src="src/transparent-warsaw.png"
+                class="img-fluid mb-3"
+                alt="Travel App"
+            /></a>
+            <h3 class="text-center m-0">Travel App</h3>
+            <p class="text-center">Built with HTML, CSS and JavaScript, made responsive with CSS</p>
+          </div>
+          <div class="col-md-6">
+            <a href="https://thaisedieren.netlify.app/"
+            target="_blank"
+            >            <img
+              src="src/transparent-thai.png"
+              class="img-fluid mb-3"
+              alt="Dictionary project"
+            /></a>
+            <h3 class="text-center m-0">Thai Animals</h3>
+            <p class="text-center">Built with HTML and CSS, made responsive with Bootstrap</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
