--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           />
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             src="src/transparent-world-clock.png"
